[package]
name = "skim"
version = "4.6.0"
authors = ["Loric ANDRE", "Zhang Jinzhou <lotabout@gmail.com>"]
description = "Fuzzy Finder in rust!"
documentation = "https://docs.rs/skim"
homepage = "https://github.com/skim-rs/skim"
repository = "https://github.com/skim-rs/skim"
readme = "README.md"
keywords = ["fuzzy", "menu", "util"]
license = "MIT"
edition = "2024"
rust-version = "1.91"
default-run = "sk"

[lib]
name = "skim"
path = "src/lib.rs"

[[bin]]
name = "sk"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
# Default is destined to the CLI, not to library usage.
default = ["cli", "frizbee", "tui"]
# Everything needed to use skim as a CLI (argument parsing, shell integrations...). This should not be needed for most libraries.
cli = ["dep:clap", "dep:clap_complete", "dep:shlex", "dep:env_logger", "dep:clap_mangen", "dep:clap_complete_nushell", "dep:roff", "tui"]
# Full TUI + runtime dependencies (ratatui, crossterm, tokio, …). Required for interactive use.
# When disabled (e.g. with --no-default-features), only the matching-algorithm modules are compiled.
tui = [
    "dep:ansi-to-tui",
    "dep:assert_enum_variants",
    "dep:color-eyre",
    "dep:crossterm",
    "dep:derive_builder",
    "dep:derive_more",
    "dep:futures",
    "dep:indexmap",
    "dep:interprocess",
    "dep:kanal",
    "dep:mimalloc",
    "dep:nix",
    "dep:portable-pty",
    "dep:ratatui",
    "dep:regex",
    "dep:ron",
    "dep:serde",
    "dep:shell-quote",
    "dep:tempfile",
    "dep:thiserror",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tui-term",
    "dep:unicode-display-width",
    "dep:unicode-normalization",
    "dep:which",
]
# Compile only the fuzzy-matching algorithms (e.g. ArinaeMatcher).
# No TUI, no allocator override, no heavy runtime deps.
# Use with --no-default-features: `cargo add skim --no-default-features --features algos_only`
algos_only = []
# Include frizbee as a matching algorithm
frizbee = ["dep:frizbee"]
# Enable gungraun (Valgrind-based) benchmarks
gungraun = ["dep:gungraun"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 2
strip = true

# Kept for compatibility
[profile.dist]
inherits = "release"

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[dependencies]
ansi-to-tui = { version = "8.0.1", optional = true }
assert_enum_variants = { version = "0.1.2", optional = true }
clap = { version = "4.6.1" , optional = true, features = ["cargo", "derive", "unstable-markdown"] }
clap_complete = { version = "4.6.0", optional = true }
clap_complete_nushell = { version = "4.6.0", optional = true }
clap_mangen = { version = "0.3.0", optional = true }
color-eyre = { version = "0.6.5", optional = true }
# Crossterm's version is selected by ratatui
crossterm = { version = ">=0.0.0", optional = true, features = ["event-stream", "use-dev-tty", "libc"] }
derive_builder = { version = "0.20.2", optional = true }
derive_more = { version = "2.1.1", optional = true, features = ["debug", "eq"] }
env_logger = { version = "0.11.10", optional = true, features = ["humantime"] }
futures = { version = "0.3.32", optional = true }
gungraun = { version = "0.18.1", optional = true }
indexmap = { version = "2.13.1", optional = true }
interprocess = { version = "2.4.2", optional = true, features = ["tokio"] }
kanal = { version = "0.1.1", optional = true }
log = "0.4.29"
memchr = "2.8.0"
mimalloc = { version = "0.1.48", optional = true, features = ["v3"] }
nix = { version = "0.31.2", optional = true, features = ["fs", "poll"] }
portable-pty = { version = "0.9.0", optional = true }
ratatui = { version = "0.30.0", optional = true }
regex = { version = "1.12.3", optional = true }
roff = { version = "1.1.1", optional = true }
ron = { version = "0.12.1", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
shell-quote = { version = "0.7.2", optional = true }
shlex = { version = "1.3.0", optional = true }
tempfile = { version = "3.27.0", optional = true }
thiserror = { version = "2.0.18", optional = true }
thread_local = "1.1.9"
tokio = { version = "1.52.1", optional = true, features = ["macros", "net", "rt-multi-thread", "sync", "time", "tokio-macros"] }
tokio-util = { version = "0.7.18", optional = true }
tui-term = { version = "0.3.4", optional = true }
unicode-display-width = { version = "0.3.0", optional = true }
unicode-normalization = { version = "0.1.25", optional = true }
which = { version = "8.0.2", optional = true }

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
frizbee = { version = "=0.9.0", optional = true }

[build-dependencies]
cfg_aliases = "0.2.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
gnuplot = "0.0.46"
insta = "1.47"
rand = "0.10.0"
serde_json = { version = "=1.0.149" }
serial_test = "=3.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage, coverage_nightly)'] }

[[bench]]
name = "read_and_match"
harness = false

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "partial"
harness = false

[[bench]]
name = "matcher_micro"
harness = false

[[bench]]
name = "gungraun"
harness = false
required-features = ["gungraun"]

[[bench]]
name = "cli"
harness = false
bench = false

[package.metadata.wix]
upgrade-guid = "6DDAED06-EBE2-41C4-94F5-CB03F2A4B92E"
path-guid = "05D1A327-19E0-4C82-B5EC-6B28E40C691B"
license = false
eula = false
